force-app/main/default/objects/Contact/fields/Extension_Image__c.field-meta.xml
<CustomField>
    <fullName>Extension_Image__c</fullName>
    <label>Extension Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>