force-app/main/default/objects/Contact/fields/Extension_Notes__c.field-meta.xml
<CustomField>
    <fullName>Extension_Notes__c</fullName>
    <label>Extension Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>