force-app/main/default/objects/Contact/fields/Extension_Staff__c.field-meta.xml
<CustomField>
    <fullName>Extension_Staff__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created Mar 2024 for Extension purposes to differentiate from Faculty.  - Easton</description>
    <label>Extension Staff</label>
    <type>Checkbox</type>
</CustomField>