force-app/main/default/objects/Contact/listViews/Cottage_Food_Contacts.listView-meta.xml
<ListView>
    <fullName>Cottage_Food_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Cottage Food Contacts</label>
</ListView>